src/main/java/test/socail/media/error/TokenError.java
package test.socail.media.error;

public class TokenError extends RuntimeException{
    public TokenError(String message) {
        super(message);
    }
}
